opengraph integration using server

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + React</title>
+
+  <meta property="og:title" content="__META_OG_TITLE__" />
+  <meta property="og:description" content="__META_OG_DESCRIPTION__" />
+  <meta property="og:image" content="__META_OG_IMAGE__" />
+  <meta property="og:url" content={window.location.href} />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="__META_OG_TITLE__" />
+  <meta name="twitter:description" content="__META_OG_DESCRIPTION__" />
+  <meta name="twitter:image" content="__META_OG_IMAGE__" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
